Fixed place images, colors and scrollbar

--- a/estilos.css
+++ b/estilos.css
@@ -31,8 +31,10 @@
     color: #fff;
 }
 .img-tm{
-    width: 271px;
-    height: 374px;
+    min-width: 271px;
+    min-height: 410px;
+    max-width: 271px;
+    max-height: 410px;
 }
 .org{
     color: #ffa420;
@@ -56,4 +58,16 @@
 }
 .bln{
     color: white;
+}
+
+html::-webkit-scrollbar{
+    width:1.2rem;
+}
+
+html::-webkit-scrollbar-track{
+    background:#333;
+}
+
+html::-webkit-scrollbar-thumb{
+    background:var(--yellow);
 }
